# typed-getenv

./: .gitignore  README.md  example.py  pyproject.toml  test_bool_parse.py  test_float_parse.py  test_int_parse.py  test_invalid_type_parse.py  test_str_parse.py  test_unset_parse.py
tests/: __init__.py  test_bool_parse.py  test_float_parse.py  test_int_parse.py  test_invalid_type_parse.py  test_str_parse.py  test_unset_parse.py
typed_getenv/: __init__.py  _exceptions.py  _getenv.py
