[tool.poetry]
name = "typed-getenv"
version = "0.1.0"
description = "A simple module for environment variable based configuration"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
